mux-compiler/tests/snapshots/executable_integration__executable_integration__lexer_invalid_escape_in_char.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux_compiler run /home/derekcorn/code/mux-lang/test_scripts/error_cases/lexer_invalid_escape_in_char.mux`
error: Unknown escape sequence: \x
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/lexer_invalid_escape_in_char.mux:2:12
   |
 2 | auto c = '\x'
   |            ^
   |
= help: Valid escape sequences: \n, \t, \r, \0, \\, \'
